--- a/form.html
+++ b/form.html
@@ -18,10 +18,14 @@ Description : A simple HTML file for form tag.
     <form action="#" method="post">
         <fieldset>
             <legend>Personal Information</legend>
-            <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label><br>
+            <input type="name" id="name" name="name"><br>
+            <!-- 1/1 Add a label and input field for 'Name' here -->
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
-            <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <!--2/2 Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
         </fieldset>
 
         <fieldset>
@@ -29,32 +33,56 @@ Description : A simple HTML file for form tag.
             <p>Gender:</p>
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
-            <!-- Create radio buttons for 'Female', and 'Other' gender options -->
+            <!-- 3/3 Create radio buttons for 'Female', and 'Other' gender options -->
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="female">Other</label><br><br>
 	
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
+            <select id="fruits" name="fruits" size="5">
 				<option value="apple">Apple</option>
-                <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
+                <option value="banana">Banana</option>
+                <option value="orange">Orange</option>
+                <option value="pineapple">Pineapple</option>
+                <option value="blueberry">Blueberry</option>
+                <option value="raspberry">Raspberry</option>
+                <option value="dragonfruit">Dragonfruit</option>
+                <option value="starfruit">Starfruit</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="grape">Grape</option>
+                <option value="blackberry">Blackberry</option>
+                <!-- 4/4 Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
             </select><br>
-			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
+			<!-- 8/8 Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
         </fieldset>
 
         <fieldset>
             <legend>Other Elements</legend>
-            <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
+            <!-- 5/5 Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
+            <label for="bday">Birthday:</label><br>
+            <input type="date" id="bday" name="bday"><br>
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
-            <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
+            <!-- 6/6 Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
+            <label for="quantity">Quantity (between 1 and 5):</label><br>
+            <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
             <label for="range">Range (between 1 and 10):</label><br>
-            <input type="range" id="range" name="range" min="1" max="10"><br>
-			<!-- Add an attribute to the range input to set its initial value to 2-->
-            <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
+			<!-- 7/7 Add an attribute to the range input to set its initial value to 2-->
+            <!-- 7/7 Add a label and input field for 'Homepage', use the correct type for URLs -->
+            <label for="homepage">HomePage:</label><br>
+            <input type="url" id="homepage" name="homepage"><br>
             <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback"></textarea><br>
-            <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
-            <!-- Add a file input field -->
-            <!-- Add a checkbox for 'Subscribe to newsletter' -->
-            <!-- Add a hidden field for 'customerId', set its value to '12345' -->
+			<textarea id="feedback" name="feedback" rows="10" cols="100"></textarea><br>
+            <!-- 9/9 Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
+            <!-- 9/9 Add a file input field -->
+            <input type="file" id="file" name="file"><br>
+            <!-- 9/9 Add a checkbox for 'Subscribe to newsletter' -->
+            <input type="checkbox" id="sub" name="sub" value="newsletter">
+            <label for="sub">Subscribe To Newsletter</label> <br>
+            <!-- 9/9 Add a hidden field for 'customerId', set its value to '12345' -->
+            <input type="hidden" id="customerID" name="customerID" value="12345">
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </fieldset>
