--- a/styling.html
+++ b/styling.html
@@ -14,6 +14,9 @@ Description : Learning CSS.
     <style>
         #margin-demo {
             /*Modify #margin-demo to have a margin of 30px and a solid black border of 2px. Also, the borders must fit the content.*/
+            margin: 30px;
+            border: 2px;
+            
         }
 
         .padding-demo {
